v2/assets/dataservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: rhm-data-service-tls
  name: rhm-data-service
  labels:
    app: rhm-data-service
spec:
  ports:
    - name: grpc
      port: 8004
      protocol: TCP
      targetPort: 8004
      appProtocol: kubernetes.io/h2c
    - name: grpc-web
      port: 8008
      protocol: TCP
      targetPort: 8008
      appProtocol: kubernetes.io/h2c
    - name: db
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: rhm-data-service
