v2/assets/dataservice/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhm-data-service
spec:
  port:
    targetPort: grpc-web
  to:
    kind: Service
    name: rhm-data-service
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
